<resources>
    <string name="app_name">ShopApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="intro_skip">skip</string>
    <string name="intro_get_started">Get Started</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="signup">Signup</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="contact_us">Contact Us</string>
    <string name="favourite_zone">Favourite Zone</string>
    <string name="recipes">Recipes</string>
    <string name="share">Share</string>
    <string name="my_rewards">My Rewards</string>
    <string name="my_cart">My Cart</string>
    <string name="my_notification">My Notification</string>
    <string name="my_orders">My Orders</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="already_have_account">Already have account?</string>
    <string name="on_num">One Number Needed at Least</string>
    <string name="cap_letter">1 Capital letter Needed At Least</string>
    <string name="password_empty">Please, enter your password</string>
    <string name="min_password">Password should include 1Capital letter, 1 Number, and min 8 character, special character are not allowed</string>
    <string name="pass_no_spec_characters">Special characters are not allowed</string>

    <string name="intro_description_1">Discover millions of products at your fingertips with our easy-to-use app</string>
    <string name="intro_description_2">Shop confidently with our secure payment options and fast delivery</string>
    <string name="intro_description_3">Stay up-to-date on the latest trends and products with our curated collections</string>
    <string name="intro_description_4">Never miss a deal again! Get personalized recommendations and exclusive discounts</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="remember_me">Remember Me</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="register">Register</string>
    <string name="create_your_new_account">Create your new account</string>
    <string name="or">or</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="category">Category</string>
    <string name="account">Account</string>
    <string name="profile">profile</string>

    <string name="ahmed_khalifa">Ahmed Khalifa</string>
    <string name="verified">verified</string>
    <string name="search">Search</string>
    <string name="location">Egypt</string>
    <string name="Zero">0</string>
    <string name="best_offer">Best offers</string>
    <string name="see_all">see all</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="price_label">Price: </string>
    <string name="product_name">product_name</string>
    <string name="item_description">description</string>
    <string name="quantity">quantity</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="_500_points">point</string>
    <string name="user_email_com">user@email.com</string>
    <string name="user_name">User Name</string>
    <string name="time">00:00</string>
    <string name="notification">notification</string>
    <string name="title">title</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="all_product">All product</string>
    <string name="product_price">product price</string>
    <string name="total_price">total price</string>
    <string name="deliver_to">Deliver to</string>
    <string name="no_cart_item_available">No cart items available</string>
    <string name="no_fav_item_available">No Favourite items available</string>
    <string name="proceed_to_buy">Proceed to Buy</string>
    <string name="subtotal">Subtotal</string>
    <string name="my_favourites">My Favourites</string>


</resources>