<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_10sdp"
        app:shapeAppearance="?attr/shapeAppearanceMediumComponent"
        android:layout_margin="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            >
            <LinearLayout
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/notificationCIM"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    app:civ_border_color="@color/black"
                    android:src="@drawable/avatar" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/notifications_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginStart="@dimen/_3sdp"
                        android:textSize="@dimen/_14ssp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/raleway_regular"
                        android:text="@string/title" />
                    <TextView
                        android:id="@+id/notificationsTimeTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_3sdp"
                        android:textSize="@dimen/_10ssp"
                        android:fontFamily="@font/raleway_medium"
                        android:text="@string/time" />
                </LinearLayout>
            </LinearLayout>



            <TextView
                android:id="@+id/notification_massage_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/notification"
                android:layout_marginTop="@dimen/_5sdp"
                android:textSize="@dimen/_14ssp"
                android:paddingStart="@dimen/_40sdp"
                />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>



</androidx.constraintlayout.widget.ConstraintLayout>